2008-05-03  Hans Boehm <Hans.Boehm@hp.com>
	
	* include/gc_version.h, configure.ac, doc/README:
	Change to version 7.2alpha1.
	* configure: Regenerate.

[7.1]

2008-05-03  Hans Boehm <Hans.Boehm@hp.com>
	
	* include/gc_version.h, configure.ac, doc/README:
	Change to version 7.1.
	* configure: Regenerate.

2008-05-03  Hans Boehm <Hans.Boehm@hp.com>

	* doc/gcinterface.html: Improve C++ interface documentation.

2008-03-10  Hans Boehm <Hans.Boehm@hp.com>

	* allchblk.c (GC_allochblk): Check for overflow during size
	rounding.
	* tests/huge_test.c: New.
	* Makefile.direct, tests/tests.am: Add huge_test.c
	* Makefile.in: Regenerate.

2008-02-29  Hans Boehm <Hans.Boehm@hp.com>

	* pthread_support.c: Fix typo in comment.
	* os_dep.c (GC_win32_get_mem): Add heap section only if
	allocation succeeded.

2008-02-28  Hans Boehm <Hans.Boehm@hp.com>

	* malloc.c: (free replacement) Fix caller address space check.

2008-02-25  Hans Boehm <Hans.Boehm@hp.com>

	* finalize.c (GC_grow_table): Dereference table in null-check.

2008-02-24  Hans Boehm <Hans.Boehm@hp.com>

	* win32_threads.c (GC_delete_gc_thread, GC_delete_thread):
	Consistently call CloseHandle. (GC_suspend): Call
	GC_delete_gc_thread.
	* tests/test.c: Don't reference GC_print_stats if not exported.

2008-02-20  Hans Boehm <Hans.Boehm@hp.com>

	* tests/test.c (run_one_test): Don't mention pthread_self().
	* misc.c: Declare GC_thr_init().

2008-02-20  Hans Boehm <Hans.Boehm@hp.com>

	* allchblk.c (add_to_fl): disable assertions with USE_MUNMAP,
	and refine assertions to handle huge unmergable blocks.
	(GC_allochblk_nth): Add comment.

2008-02-20  Hans Boehm <Hans.Boehm@hp.com>

	* include/private/gcconfig.h: Add misssing FREEBSD macro
	consistency test.

2008-02-20  Hans Boehm <Hans.Boehm@hp.com>

	* allchblk.c (GC_enough_large_bytes_left): No longer take
	parameters; return free list index bound.
	(GC_merge_unmapped): Don't access nexthdr until after null test.