@@ -30,7 +30,13 @@ instead of calling GC_malloc and friends directly.  This allows debugging
 versions of the routines to be substituted by defining GC_DEBUG before
 including gc.h.
 .LP
-See the documentation in the include file gc_cpp.h for an alternate, C++ specific interface to the garbage collector.
+See the documentation in the include files gc_cpp.h and gc_allocator.h,
+as well as the gcinterface.html file in the distribution,
+for an alternate, C++ specific interface to the garbage collector.
+Note that C++ programs generally
+need to be careful to ensure that all allocated memory (whether via new,
+malloc, or STL allocators) that may point to garbage collected memory
+is either itself garbage collected, or at least traced by the collector.
 .LP
 Unlike the standard implementations of malloc,
 .I
